--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 13 17:52:11 ICT 2019
-sdk.dir=C\:\\Users\\Linh\\AppData\\Local\\Android\\Sdk
+#Sat Apr 13 19:59:26 ICT 2019
+sdk.dir=C\:\\Users\\anhmq\\AppData\\Local\\Android\\Sdk
